<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ListPreference
        android:entries="@array/themeNames"
        android:entryValues="@array/themeValues"
        android:key="theme"
        android:title="@string/theme" />

    <ListPreference
        android:entries="@array/gridNames"
        android:entryValues="@array/gridValues"
        android:key="gridtype"
        android:title="@string/grid_type" />

    <CheckBoxPreference
        android:key="fogofwar"
        android:title="@string/fog_of_war_enabled" />
    
    <CheckBoxPreference
        android:key="autosave"
        android:title="@string/autosave" />

    <CheckBoxPreference
        android:key="snapdrawing"
        android:title="Snap drawing to grid" />
      
    <CheckBoxPreference
        android:key="snaptokens"
        android:title="Snap tokens to grid" />
    
    <CheckBoxPreference
        android:key="tokenssnaptogridlines"
        android:title="Snap tokens to grid lines" 
        android:summary="Tokens snap to intersections of grid lines instead of the spaces between grid lines."/>
    
    <Preference
        android:key="about"
        android:title="@string/about" />

    <Preference
        android:key="artcredits"
        android:title="@string/art_credits" />

</PreferenceScreen>